Update Client.java