@@ -9,19 +9,22 @@ import java.util.concurrent.*;
 import java.util.Objects;
 
 public class Client {
-    private static final String TRUSTED_SERVER_FINGERPRINT = "y2U0TsNroEf+M7mlIF8MofyE439EuwCBL9yUKM503ZQ=";
     private static final String SERVER_HOST = "localhost";
     private static final int SERVER_PORT = 1234;
     private static volatile boolean running = true;
+    private static String TRUSTED_SERVER_FINGERPRINT = null;
 
     public static void main(String[] args) {
         try {
             // Generate client key pair
             KeyPair keyPair = RSAKeyUtil.generateKeyPair();
+            System.out.println("Generated client key pair. Fingerprint: " +
+                    KeyConverter.getFingerprint(keyPair.getPublic()));
 
             // Establish connection
+            System.out.println("Connecting to server...");
             Socket socket = new Socket(SERVER_HOST, SERVER_PORT);
-            socket.setSoTimeout(30000); // 5-second timeout for reads
+            socket.setSoTimeout(30000); // 30-second timeout for reads
 
             // Initialize streams
             BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
@@ -30,31 +33,30 @@ public class Client {
 
             // ========== KEY EXCHANGE WITH VERIFICATION ==========
             // 1. Receive server's public key and fingerprint
+            System.out.println("Performing key exchange...");
             PublicKey serverKey = KeyConverter.stringToPublicKey(in.readLine());
             String serverFingerprint = in.readLine();
+            TRUSTED_SERVER_FINGERPRINT = KeyConverter.getFingerprint(serverKey);
+
+            System.out.println("\nServer fingerprint: " + serverFingerprint);
+            System.out.println("Calculated fingerprint: " + TRUSTED_SERVER_FINGERPRINT);
 
             if (!serverFingerprint.equals(TRUSTED_SERVER_FINGERPRINT)) {
-                throw new SecurityException("""
-            DANGER: Server fingerprint mismatch!
-            Expected: %s
-            Received: %s
-            Possible MITM attack! Disconnecting...""".formatted(
+                throw new SecurityException(String.format(
+                        "DANGER: Server fingerprint mismatch!%nExpected: %s%nReceived: %s%nPossible MITM attack!",
                         TRUSTED_SERVER_FINGERPRINT,
                         serverFingerprint
                 ));
             }
 
-
-
-
-
+            // 2. Send client's public key and fingerprint
             out.println(KeyConverter.keyToString(keyPair.getPublic()));
             out.println(KeyConverter.getFingerprint(keyPair.getPublic()));
 
-            // 4. Receive assigned name
+            // 3. Receive assigned name
             String clientName = in.readLine();
             System.out.println("\nConnected as: " + clientName);
-            System.out.println("Secure channel established. You may begin messaging.");
+            System.out.println("Secure channel established. Type 'exit' to quit.");
 
             // ========== MESSAGE PROCESSING ==========
             // Start message receiver thread
@@ -71,11 +73,9 @@ public class Client {
                         System.out.println("\n[Server] " + decrypted);
                         System.out.print("Your message: ");
                     }
-                } catch (RSAEncryption.RSAOperationException e) {
-                    System.err.println("\nDecryption error: " + e.getMessage());
-                } catch (IOException e) {
+                } catch (Exception e) {
                     if (running) {
-                        System.err.println("\nConnection error: " + e.getMessage());
+                        System.err.println("\nError in receiver thread: " + e.getMessage());
                     }
                 }
             });
@@ -86,15 +86,15 @@ public class Client {
                     System.out.print("Your message: ");
                     String message = console.readLine();
 
-
                     if (message == null || "exit".equalsIgnoreCase(message)) {
                         break;
                     }
 
                     String encrypted = RSAEncryption.encrypt(Objects.requireNonNull(message), serverKey);
                     out.println(encrypted);
-                } catch (RSAEncryption.RSAOperationException e) {
-                    System.err.println("Encryption error: " + e.getMessage());
+                } catch (Exception e) {
+                    System.err.println("Error sending message: " + e.getMessage());
+                    break;
                 }
             }
 
@@ -110,9 +110,11 @@ public class Client {
             System.err.println("Network error: " + e.getMessage());
         } catch (Exception e) {
             System.err.println("Unexpected error: " + e.getMessage());
+            e.printStackTrace();
         } finally {
             running = false;
             System.out.println("Disconnecting...");
+            System.exit(0);
         }
     }
 }
